Setup http_basic_auth

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 STRIPE_PUBLISHABLE_KEY=your_test_key_here
 STRIPE_SECRET_KEY=your_test_key_here
+HBA_NAME=your_HTTP_basic_auth_name_here
+HBA_PASSWORD=your_HTTP_basic_auth_password_here
